tests/multiubuntu/test-cases/TC_31/TC_31_egress_ingress_matchLabels_toPorts_singlePort.json
[{
 "verdict": "FORWARDED",
    "IP": {
      "source": "10.0.1.10",
      "destination": "10.0.1.108",
      "ipVersion": "IPv4"
    },
    "l4": {
      "TCP": {
        "source_port": 42908,
        "destination_port": 8080
      }
    },
    "source": {
      "namespace": "multiubuntu",
      "labels": [
        "k8s:container=ubuntu-1",
        "k8s:group=group-1"
      ],
      "pod_name": "ubuntu-1-deployment-XYZ"
    },
    "destination": {
      "namespace": "multiubuntu",
      "labels": [
        "k8s:container=ubuntu-3",
        "k8s:group=group-1"
      ],
      "pod_name": "ubuntu-3-deployment-ABC"
    }
  }]
